# learning-tetris

./: .dockerignore  .gitignore  CODE_OPTIMIZATION_REPORT.md  DEPLOYMENT.md  DISTRIBUTION_FIX_REPORT.md  Dockerfile  PLAY_CONTROL_IMPROVEMENTS.md  QUICK_TRAIN_TOGGLE_IMPLEMENTATION.md  README.md  REAL_FIX_REPORT.md  RL_CLEANUP_REPORT.md  SETUP_COMPLETE.md  TESTING_REPORT.md  TETRIS_BUG_FIX_REPORT.md  UNUSED_FILES_ANALYSIS.md  app_demo_visualization.html  cloud-run-service.yaml  copilot-instructions.md  create_demo_screenshot.py  env.example  gh_copilot_instructions_new_algos.md.md  nohup.out  pyproject.toml  requirements.txt  setup-codespaces.sh  setup-gcp-deployment.sh  test_comprehensive.py  test_detailed_websocket.py  test_distribution_fix.py  test_integration.py  ui_preview.html
.github/workflows/: deploy.yml
app/: agent_factory.py  algo_schemas.py  config.py  main.py  schemas.py
app/static/: activity-logger.js  algorithm-utils.js  app-refactored.js  app.js  game-renderer.js  index.html  stats-manager.js  styles.css  websocket-manager.js
rl/: aco_agent.py  afterstate.py  afterstate_backup.py  agent_base.py  cem_agent.py  eval.py  features.py  greedy_agent.py  policy_store.py  reinforce_agent.py  sa_agent.py  search_utils.py  tabu_agent.py  tetris_env.py  train.py
rl/agents/: __init__.py  heuristic.py  learning.py
rl/utils/: __init__.py  search.py
tests/: test_api.py  test_cem.py  test_env.py  test_features.py  test_new_algorithms.py  test_reinforce.py
