[project]
name = "rl-tetris"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.112.2",
  "uvicorn[standard]==0.30.6",
  "numpy==1.26.4",
  "pydantic==2.8.2",
  "jinja2==3.1.4",
  "httpx==0.27.2",
  "pytest==8.3.2",
  "pytest-asyncio==0.23.8",
  "websockets==12.0"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "rl"]